🐛 (UI) Fix text wrapping

--- a/web_chat/frontend/style.css
+++ b/web_chat/frontend/style.css
@@ -97,9 +97,46 @@ footer > form > label {
 	display: flex;
 	justify-content: space-between;
 	padding-top: 3%;
+	margin-bottom: 0.5rem;
 	flex-wrap: wrap;
+}
+
+.post > .post-header {
+	font-size: larger;
+	display: flex;
+	justify-content: space-between;
+	padding-top: 3%;
+	margin-bottom: 0.5rem;
+	/*flex-wrap: wrap;*/
+}
+
+.post-header > .post-number {
+	text-align: left;
+	width: 50%;
+}
+
+.post-header > .post-date {
+	text-align: right;
+	text-wrap: none;
+	width: 50%;
 }
 
 .post > .post-contents {
 	padding-bottom: 3%;
+}
+
+@media (max-width: 500px) {
+	.post > .post-header {
+		flex-direction: column;
+	}
+
+	.post-header > .post-number {
+		text-align: left;
+		width: auto;
+	}
+
+	.post-header > .post-date {
+		text-align: left;
+		width: auto;
+	}
 }
